[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/stations/station_background_standard.png" type="Texture" id=1]
[ext_resource path="res://objects/stations/Station.gd" type="Script" id=2]
[ext_resource path="res://objects/resources/ResourceStore.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/stations/ResourceDisplay.gd" type="Script" id=4]
[ext_resource path="res://fonts/munro_dynamic_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://objects/stations/RemoveMinionStationButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://objects/stations/AddMinionStationButton.tscn" type="PackedScene" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 48 )

[node name="Station" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 64, 64 )
frames = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 64, 80 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="ActionTimer" type="Timer" parent="."]
autostart = true

[node name="ResourceStore" parent="." instance=ExtResource( 3 )]
max_energy = 10
max_protein = 5

[node name="ResourceDisplay" type="Node2D" parent="."]
position = Vector2( 0, 8 )
script = ExtResource( 4 )
resourceStorePath = NodePath("../ResourceStore")

[node name="EnergyLabel" type="Label" parent="ResourceDisplay"]
margin_left = -8.0
margin_right = 15.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 56, 8 )
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxEnergyLabel" type="Label" parent="ResourceDisplay"]
margin_left = 16.0
margin_right = 58.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 32, 8 )
custom_fonts/font = ExtResource( 5 )
text = "/0 Energy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProteinLabel" type="Label" parent="ResourceDisplay"]
margin_left = 58.0
margin_right = 81.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 56, 8 )
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxProteinLabel" type="Label" parent="ResourceDisplay"]
margin_left = 82.0
margin_right = 124.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 32, 8 )
custom_fonts/font = ExtResource( 5 )
text = "/0 Protein"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddMinionStationButton" parent="." instance=ExtResource( 7 )]

[node name="RemoveMinionStationButton" parent="." instance=ExtResource( 6 )]
position = Vector2( 30, 0 )
[connection signal="timeout" from="ActionTimer" to="." method="_on_ActionTimer_timeout"]
[connection signal="energy_amount_changed" from="ResourceStore" to="ResourceDisplay" method="_on_ResourceStore_energy_amount_changed"]
[connection signal="max_energy_changed" from="ResourceStore" to="ResourceDisplay" method="_on_ResourceStore_max_energy_changed"]
[connection signal="max_protein_changed" from="ResourceStore" to="ResourceDisplay" method="_on_ResourceStore_max_protein_changed"]
[connection signal="protein_amount_changed" from="ResourceStore" to="ResourceDisplay" method="_on_ResourceStore_protein_amount_changed"]
